# django-oauth2.0-template

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: lint.yml
accounts/: adapter.py  admin.py  backends.py  models.py  tests.py
accounts/management/commands/: reset_db.py
accounts/migrations/: 0001_initial.py  0002_customuser_is_banned.py
core/: exceptions.py  settings.py  urls.py  views.py  wsgi.py
scripts/: nuke_db.sh  setup.sh
